--- a/website.css
+++ b/website.css
@@ -1,8 +1,120 @@
 h1{
+    margin-left: 10px;
     font-family: Gineso-condensed, sans-serif !important;
+    /* text-align: center; */
     color:brown
 }
 
+p{
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size:1em;
+    font-family: "Segoe UI","Helvetica Neue","Helvetica",Arial,sans-serif;
+}
+html,body{
+    height: 100%;
+}
+
+td,tr{
+    text-align: left;
+    border:solid thin;
+    
+}
+
+.loginDiv{
+    width: 30%;
+    background:white;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.loginInput{
+    text-align: center;
+}
+
+.loginText{
+    text-align: center;
+}
+
+.login-button{
+    cursor:pointer;
+    margin-top:10px;
+}
+
+.table{
+    width:100%;
+    margin-bottom: 20px;
+    border-collapse: collapse;
+}
+
+.pictureSlot{
+    text-align: center;
+}
+
+.removeSlot{
+    text-align: center;
+}
+
+.downloadDiv{
+    text-align: center;
+}
+
+.downloadButton{
+    background: #5599FF;
+    width: 14vw;
+    height: 3vw;
+    cursor: pointer;
+    color:white;
+    font-Size:1.25vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.removeButton{
+    background-color: red;
+    color:white;
+    cursor:pointer;
+}
+.login{
+    word-spacing:normal;
+    float: right;
+    width: 110px;
+    color: #fff;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    font-weight: 600;
+}
+.map-container{
+    height:100vh;
+    width:auto;
+}
+
+
+.home_title{
+    font-family: Gineso-condensed, sans-serif !important;
+    text-align: center;
+    color:brown
+}
+.mapboxgl-map{
+    height: 85%;
+    width:100%;
+}
+
+.article{
+    width: 60%;
+    /* max-width: 1260px;
+    min-width: 755px; */
+    margin: 0 auto;
+    overflow: hidden;
+    background: white;
+    min-height: 100%;
+}
+
+.background{
+    background: #f6f6f6;
+    min-height:100%;
+}
 .vt-logo{
     display:block;
     position:relative;
